[tool.poetry]
name = "ghapi-plus-cli"
version = "0.1.0"
description = "A better CLI interface for ghapi."
authors = ["osfanbuff63 <91388253+osfanbuff63@users.noreply.github.com>"]
license = "GNU General Public License version 3"
readme = "README.md"
packages = [{include = "ghapi_plus_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
ghapi = "^1.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
